libstream-more-perl (0.6.15) UNRELEASED; urgency=low

  * Stream::Queue, Stream::In::DiskBuffer: performance improvements

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 17 Mar 2011 22:32:44 +0300

libstream-more-perl (0.6.14) unstable; urgency=low

  * Stream::Queue complete read_only support

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Tue, 15 Mar 2011 19:04:20 +0300

libstream-more-perl (0.6.13) unstable; urgency=low

  [ Vyacheslav Matjukhin (No comments) ]
  * Stream::Out::Any:
   - shuffle targets
   - more POD

  [ Andrei Mishchenko ]
  * Stream::Queue read_only mode

  [ Vyacheslav Matjukhin (No comments) ]
  * Stream::Simple: code_in() function
  * Stream::Bin::Filter removed (it got replaced by Yandex::Pumper)

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 09 Mar 2011 22:30:10 +0300

libstream-more-perl (0.6.12) unstable; urgency=low

  [ Vyacheslav Matjukhin (No comments) ]
  * Stream::Unrotate removed
  * Stream::Simple: memory_storage() prototype fixed
  * Stream::Out::Any: 'revalidate' option implemented
  * Stream::Concat: commit now commits new underlying stream

  [ Andrei Mishchenko ]
  * DiskBuffer read_only mode, formats support and proper lag calculation

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Tue, 22 Feb 2011 22:03:17 +0300

libstream-more-perl (0.6.11) unstable; urgency=low

  * Stream::In::DiskBuffer and Stream::Queue::In now implement lag method

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 01 Nov 2010 23:09:54 +0300

libstream-more-perl (0.6.10) unstable; urgency=low

  * hotfix: deadlocks in Stream::In::DiskBuffer fixed

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 01 Nov 2010 18:14:10 +0300

libstream-more-perl (0.6.9) unstable; urgency=low

  * Stream::Propagate: explicit Content-Type: text/plain

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 28 Oct 2010 16:08:19 +0400
