@@ -1,6 +1,7 @@
 libstream-more-perl (0.6.15) UNRELEASED; urgency=low
 
   * Stream::Queue, Stream::In::DiskBuffer: performance improvements
+  * Stream::Concat::In: support for arbitrary number of input streams
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 17 Mar 2011 22:32:44 +0300
 
